--- a/api-socket/.env
+++ b/api-socket/.env
@@ -13,8 +13,8 @@ DB_DB=social_network
 
 MAILER_HOST=smtp.gmail.com
 MAILER_PORT=587
-MAILDEV_USER=safyur0621@gmail.com
-MAILDEV_PASS=ntxzeqyanutredoc
+MAILDEV_USER=
+MAILDEV_PASS=
 MAIL_API_HOST='http://localhost:8000'
 
 
