--- a/final-app/.env
+++ b/final-app/.env
@@ -4,8 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:admin@localhost:5433/social_network?schema=public"
-# DATABASE_URL="postgresql://postgres:admin@localhost:5432/mydb?schema=public"
+# DATABASE_URL="postgresql://postgres:admin@localhost:5433/social_network?schema=public"
+DATABASE_URL="postgresql://postgres:admin@postgres:5432/social_network?schema=public"
 
 
 API_PORT=8000
@@ -15,11 +15,14 @@ ACCESS_TOKEN_TIME='7d'
 REFRESH_TOKEN_KEY=MyRefreshTokenSecretKey
 REFRESH_TOKEN_TIME='7d'
 
-DB_PASS=admin
+DATABASE_CONNECTOR=postgresql
 DB_HOST=localhost
+DB_PORT=5432
 DB_USER=postgres
-DB_PORT=5433
+DB_PASS=admin
 DB_DB=social_network
+CONNECTION_LIMIT=10
+
 
 MAILER_HOST=smtp.gmail.com
 MAILER_PORT=587
