--- a/final-app/.env
+++ b/final-app/.env
@@ -26,6 +26,6 @@ CONNECTION_LIMIT=10
 
 MAILER_HOST=smtp.gmail.com
 MAILER_PORT=587
-MAILDEV_USER=safyur0621@gmail.com
-MAILDEV_PASS=ntxzeqyanutredoc
+MAILDEV_USER=
+MAILDEV_PASS=
 MAIL_API_HOST='http://localhost:8000'
